# syncai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  error.rs  main.rs  server.rs  sync.rs  watcher.rs
